--- a/front/public/static/locales/de/app-bar.json
+++ b/front/public/static/locales/de/app-bar.json
@@ -1,5 +1,7 @@
 {
   "help": "Hilfe",
-  "how-to-play": "How to play?",
+  "how-to-play": "Spielanleitung",
   "logout": "Abmelden"
 }
+
+//laupardo: Me parece una excelente idea dar la opción de tener varios idiomas para poder ser más inclusivo y llegarle a un mayor público.
